--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -7,17 +7,33 @@
     tools:context=".collectionActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView"
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:text="コレクション"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:layout_height="64dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="125dp"
+                android:layout_height="wrap_content"
+                android:text="@string/ハードキャストされたテキスト" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="265dp"
+                android:layout_height="54dp"
+                android:text="@string/コレクション"
+                android:textSize="30sp" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,28 +45,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton3"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton4"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
         </LinearLayout>
 
@@ -64,28 +84,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton6"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton7"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton8"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
         </LinearLayout>
 
         <LinearLayout
@@ -98,28 +122,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton10"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton11"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton12"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
         </LinearLayout>
 
         <LinearLayout
@@ -132,28 +160,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton14"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton15"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton16"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
         </LinearLayout>
 
         <LinearLayout
@@ -166,28 +198,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton18"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton19"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
 
             <ImageButton
                 android:id="@+id/imageButton20"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@android:color/transparent"
+                android:contentDescription="@string/todo" />
         </LinearLayout>
     </LinearLayout>
 
