--- a/app/src/main/res/layout/activity_gacha.xml
+++ b/app/src/main/res/layout/activity_gacha.xml
@@ -16,14 +16,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@color/colorAccent"
         tools:layout_editor_absoluteX="0dp"
+        android:contentDescription="TODO"
         tools:layout_editor_absoluteY="-3dp" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="498dp"
+        android:layout_height="487dp"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,7 +36,6 @@
         android:id="@+id/textView"
         android:layout_width="136dp"
         android:layout_height="47dp"
-        android:autoText="false"
         android:gravity="right"
         android:text="1234"
         android:textSize="36sp"
@@ -56,6 +57,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.06"
+        android:contentDescription="TODO"
         app:srcCompat="@drawable/coin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
