--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -7,14 +7,15 @@
     tools:context=".collectionActivity">
 
     <LinearLayout
-        android:layout_width="408dp"
-        android:layout_height="730dp"
+        android:layout_width="502dp"
+        android:layout_height="794dp"
         android:background="?android:attr/colorButtonNormal"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:targetApi="lollipop">
 
         <LinearLayout
@@ -25,7 +26,7 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="298dp"
+                android:layout_width="378dp"
                 android:layout_height="match_parent"
                 android:background="@android:color/background_light"
                 android:text="@string/コレクション"
@@ -82,7 +83,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="131dp"
+            android:layout_height="147dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -121,7 +122,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="130dp"
+            android:layout_height="133dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -159,7 +160,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="131dp"
+            android:layout_height="151dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -197,7 +198,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="128dp"
+            android:layout_height="150dp"
             android:orientation="horizontal">
 
             <ImageView
