--- a/app/src/main/res/layout/activity_gacha.xml
+++ b/app/src/main/res/layout/activity_gacha.xml
@@ -12,23 +12,28 @@
         android:layout_height="0dp"
         android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@color/colorAccent" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="498dp"
-        android:layout_height="487dp"
+        android:layout_width="411dp"
+        android:layout_height="412dp"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
+        android:scaleY="1"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/gachamachine" />
 
@@ -48,6 +53,23 @@
         app:layout_constraintVertical_bias="0.064" />
 
     <TextView
+        android:id="@+id/textView2"
+        android:layout_width="257dp"
+        android:layout_height="92dp"
+        android:gravity="right"
+        android:text="0.0%"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textSize="72sp"
+        app:autoSizeTextType="none"
+        app:fontFamily="sans-serif-black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.901"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.01999998" />
+
+    <TextView
         android:id="@+id/textView3"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -58,23 +80,23 @@
         app:autoSizeTextType="none"
         app:fontFamily="sans-serif-black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.186"
+        app:layout_constraintHorizontal_bias="0.099"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.182" />
+        app:layout_constraintVertical_bias="0.199" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.06"
-        android:contentDescription="TODO"
         app:srcCompat="@drawable/coin" />
 
     <ImageView
@@ -83,7 +105,7 @@
         android:layout_height="50dp"
         android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.185"
+        app:layout_constraintHorizontal_bias="0.098"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -96,7 +118,7 @@
         android:layout_height="50dp"
         android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.185"
+        app:layout_constraintHorizontal_bias="0.098"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
