--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -7,12 +7,13 @@
     tools:context=".collectionActivity">
 
     <LinearLayout
-        android:layout_width="502dp"
-        android:layout_height="794dp"
+        android:layout_width="0dp"
+        android:layout_height="957dp"
         android:background="?android:attr/colorButtonNormal"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
@@ -21,30 +22,22 @@
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="86dp"
+            android:layout_height="65dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="378dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/background_light"
                 android:text="@string/コレクション"
                 android:textSize="36sp" />
 
-            <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:contentDescription="@string/todo"
-                app:srcCompat="@android:drawable/ic_popup_sync" />
-
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="125dp"
+            android:layout_height="160dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -83,13 +76,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="147dp"
+            android:layout_height="160dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView5"
                 android:layout_width="wrap_content"
-                android:layout_height="131dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
                 app:srcCompat="@android:color/transparent" />
@@ -122,7 +115,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="133dp"
+            android:layout_height="160dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -160,7 +153,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="151dp"
+            android:layout_height="160dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -198,7 +191,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="160dp"
             android:orientation="horizontal">
 
             <ImageView
