--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -51,7 +51,25 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1,000歩"
+                android:text="歩数　"
+                android:textColor="#F1E1E1"
+                android:textSize="22sp"
+                map:fontFamily="sans-serif" />
+
+            <TextView
+                android:id="@+id/textView2_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="#F1E1E1"
+                android:textSize="22sp"
+                map:fontFamily="sans-serif" />
+
+            <TextView
+                android:id="@+id/textView2_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="　歩"
                 android:textColor="#F1E1E1"
                 android:textSize="22sp"
                 map:fontFamily="sans-serif" />
@@ -67,17 +85,34 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="コイン獲得まで　　　　"
+                android:text="コイン獲得まで　　　　　"
                 android:textColor="#F1E1E1"
                 android:textSize="22sp"
                 map:fontFamily="sans-serif" />
-
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="コイン枚数"
-                android:textColor="#F1E1E1"
+                android:text="数"
+                android:textColor="#B909C5"
+                android:textSize="20sp"
+                map:fontFamily="sans-serif" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="/"
+                android:textColor="#B909C5"
+                android:textSize="20sp"
+                map:fontFamily="sans-serif" />
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="最大数"
+                android:textColor="#B909C5"
                 android:textSize="20sp"
                 map:fontFamily="sans-serif" />
         </LinearLayout>
@@ -86,39 +121,38 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="　"
+            android:text="　　　　　"
             android:textSize="10sp" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="　　"
-                android:textSize="15sp" />
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="match_parent"
-                android:layout_height="15dp"
-                android:max="2000"
-                android:progress="1300" />
-        </LinearLayout>
-
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="　　　　                                　　　　　進捗状態の数値"
+            android:text="　　　　            　　       　　　　　　　　　　　"
             android:textColor="#B909C5"
             android:textSize="15sp"
             map:fontFamily="sans-serif" />
 
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="29dp"
+                android:layout_height="27dp"
+                map:srcCompat="@drawable/coin" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="43dp"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="#F1E1E1"
+                android:textSize="20sp"
+                map:fontFamily="sans-serif" />
+    </LinearLayout>
 
     </LinearLayout>
 
